--- a/ncc/package.json
+++ b/ncc/package.json
@@ -41,6 +41,7 @@
 	"dependencies": {
 		"@types/papaparse": "^5.3.16",
 		"papaparse": "^5.5.3",
+		"xlsx": "^0.18.5",
 		"zod": "^3.25.67",
 		"zod-form-data": "^3.0.0"
 	}
