--- a/ncc/package.json
+++ b/ncc/package.json
@@ -40,6 +40,9 @@
 	},
 	"dependencies": {
 		"@types/papaparse": "^5.3.16",
+		"@types/pdfkit": "^0.17.2",
+		"jspdf": "^3.0.1",
+		"jspdf-autotable": "^5.0.2",
 		"papaparse": "^5.5.3",
 		"xlsx": "^0.18.5",
 		"zod": "^3.25.67",
